# github

./: .gitignore.md  API.md  README.md  advanced-security.md  audit.md  codespace.md  gist.md  lfs.md  registry.md  repository.md  security.md
.github/workflows/: nodejs.yaml  python.yaml
cli/: README.md  gh.ps1  gh.sh
copilot/: README.md  best-practice.md  chat.md  compliance.md  space.md  tier.md
copilot/cli/: README.md  install.ps1  install.sh
enterprise/: README.md  gcp.sh  pricing.md
enterprise/cloud/: README.md
enterprise/server/: README.md  gcp.sh  procurement.md
nodejs/: README.md  constants.js  package.json  repos.js  rest.js  security.js
nodejs/test/: rest.js  security.js
py/: README.md  pyproject.toml
py/davidkhala/github/: __init__.py  auth.py  security.py
py/tests/: rest_test.py
registry/: README.md  docker.sh
registry/npm/: README.md
